# remcord-api-testing

./: .gitignore  Cargo.toml  Dockerfile  app.py  pyproject.toml  readme.md  requirements.txt
k8s/: deployment.yaml  service.yaml
