[package]
name = "remcord-exchange-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = { version = "4.1", features = ["reqwest"] }
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
