[tool.poetry]
name = "remcord-api-testing"
version = "0.1.0"
description = ""
authors = ["Nathan Solis <66754842+coldenate@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "remcord_api_testing"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"
requests-oauthlib = "^1.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
