[tool.poetry]
name = "remcord-api-testing"
version = "0.1.0"
description = ""
authors = ["Nathan Solis <66754842+coldenate@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "remcord_api_testing"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
requests-oauthlib = "^1.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
